# advent-of-code-2021

./: .gitignore  pyproject.toml
01/: 01.py
02/: 02.py
03/: 03.py
04/: 04.py
05/: 05.py
06/: 06.py
07/: 07.py
08/: 08a.py  08b.py
09/: 09.py
10/: 10.py
11/: 11a.py  11b.py
12/: 12a.py  12b.py
13/: 13.py
14/: 14a.py  14b.py
15/: 15.py
16/: 16.py
21/: 21a.py  21b.py
aoc-glue/aoc_glue/: input.py  pprint.py
