[project]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aoc-glue",
    "frozendict>=2.4.6",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "uv>=0.5.6",
]

[tool.uv.sources]
aoc-glue = { path = "aoc-glue", editable = true }
